[gd_scene load_steps=27 format=3 uid="uid://vh7pmputa7r3"]

[ext_resource type="Script" path="res://player/player.gd" id="1_aujcj"]
[ext_resource type="Texture2D" uid="uid://cgihj6ylfb3re" path="res://player/spritesheet.png" id="2_ymjvg"]
[ext_resource type="Script" path="res://player/gun.gd" id="3_y3a1s"]
[ext_resource type="AudioStream" uid="uid://b01brytl75mwa" path="res://player/shoot.wav" id="4_xoos4"]
[ext_resource type="PackedScene" uid="uid://xm4nyb85l3m1" path="res://player/melee_attack.tscn" id="5_vqet2"]
[ext_resource type="AudioStream" uid="uid://bi8atqm71nrqf" path="res://audio/sfx/first_jump.wav" id="6_p2tpp"]
[ext_resource type="AudioStream" uid="uid://crdj4ovmpqs6s" path="res://audio/sfx/second_jump.wav" id="7_mjbm5"]
[ext_resource type="AudioStream" uid="uid://c1wavdsmyxpqx" path="res://audio/sfx/dash.wav" id="8_tudhf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vce51"]
size = Vector2(105.937, 100.625)

[sub_resource type="Animation" id="1"]
resource_name = "crouch"
length = 0.01
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}

[sub_resource type="Animation" id="Animation_nd8xj"]
resource_name = "dash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 7]
}

[sub_resource type="Animation" id="2"]
resource_name = "falling"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 4, 1]
}

[sub_resource type="Animation" id="3"]
resource_name = "falling_weapon"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="4"]
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="5"]
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37]
}

[sub_resource type="Animation" id="6"]
length = 0.5
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [7, 10]
}

[sub_resource type="Animation" id="7"]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [46]
}

[sub_resource type="Animation" id="Animation_lk7lc"]
resource_name = "melee_active"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [25, 25]
}

[sub_resource type="Animation" id="Animation_ctn7v"]
resource_name = "melee_recovery"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [26, 26]
}

[sub_resource type="Animation" id="Animation_hi5c0"]
resource_name = "melee_windup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 24]
}

[sub_resource type="Animation" id="8"]
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12, 23]
}

[sub_resource type="Animation" id="9"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="10"]
length = 1.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnr5f"]
_data = {
"crouch": SubResource("1"),
"dash": SubResource("Animation_nd8xj"),
"falling": SubResource("2"),
"falling_weapon": SubResource("3"),
"idle": SubResource("4"),
"idle_weapon": SubResource("5"),
"jumping": SubResource("6"),
"jumping_weapon": SubResource("7"),
"melee_active": SubResource("Animation_lk7lc"),
"melee_recovery": SubResource("Animation_ctn7v"),
"melee_windup": SubResource("Animation_hi5c0"),
"run": SubResource("8"),
"run_weapon": SubResource("9"),
"standing_weapon_ready": SubResource("10")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0r5sj"]
radius = 0.025
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_k4bsa"]
radius = 1.979

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0, 0, 0, 0)
collision_mask = 30
floor_constant_speed = true
platform_on_leave = 2
script = ExtResource("1_aujcj")

[node name="ShootAnimation" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 6)
collision_mask = 8

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.0429497, 0, 0, 0, 0.0429497, 0, 0, 0, 0, 1.33226e-12, 0.0448, 0)
visible = false
texture = ExtResource("2_ymjvg")
hframes = 8
vframes = 4
frame = 27

[node name="Gun" type="Marker2D" parent="Sprite3D"]
position = Vector2(14, 1)
script = ExtResource("3_y3a1s")

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite3D/Gun"]
position = Vector2(-30.6589, -6.13176)
stream = ExtResource("4_xoos4")

[node name="Cooldown" type="Timer" parent="Sprite3D/Gun"]
wait_time = 0.3
one_shot = true

[node name="melee_attack" parent="Sprite3D" node_paths=PackedStringArray("hitbox", "melee_timer", "debug_poly") instance=ExtResource("5_vqet2")]
visible = false
hitbox = NodePath("Hitbox")
melee_timer = NodePath("MeleeTimer")
debug_poly = NodePath("Hitbox/DebugPoly")
debug_draw = true

[node name="MeleeTimer" type="Timer" parent="Sprite3D/melee_attack"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="Sprite3D/melee_attack"]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3D/melee_attack/Hitbox"]
position = Vector2(-106.406, 12.5)
shape = SubResource("RectangleShape2D_vce51")

[node name="DebugPoly" type="Polygon2D" parent="Sprite3D/melee_attack/Hitbox"]
polygon = PackedVector2Array(-159.375, -37.5, -159.375, 62.5, -53.125, 62.5, -53.125, -37.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jnr5f")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.262144, 0, 0, 0, 0.262144, 0, 0, 0, 0, 1.33225e-12, 1.33225e-12, 0)
shape = SubResource("CapsuleShape3D_0r5sj")

[node name="first_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_p2tpp")

[node name="second_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_mjbm5")

[node name="dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_tudhf")

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2(157, 813)
scale = Vector2(2, 2)
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2(425, 813)
scale = Vector2(2, 2)
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
position = Vector2(1871, 813)
scale = Vector2(2, 2)
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
position = Vector2(1870, 564)
scale = Vector2(2, 2)
action = "shoot"
visibility_mode = 1

[node name="interact_bounds" type="Area3D" parent="."]
collision_layer = 97
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape3D" parent="interact_bounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.625, -16.25, 0)
shape = SubResource("SphereShape3D_k4bsa")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0, 0, 0, 0)

[connection signal="hit" from="Sprite3D/melee_attack" to="." method="_on_melee_attack_hit"]
[connection signal="meleeing" from="Sprite3D/melee_attack" to="." method="_on_melee_attack_meleeing"]
[connection signal="next_phase" from="Sprite3D/melee_attack" to="." method="_on_melee_attack_next_phase"]
[connection signal="body_entered" from="Sprite3D/melee_attack/Hitbox" to="Sprite3D/melee_attack" method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="interact_bounds" to="." method="_on_interact_bounds_area_entered"]
[connection signal="area_exited" from="interact_bounds" to="." method="_on_interact_bounds_area_exited"]
